[gd_scene format=4 uid="uid://b2rt4cqlrms88"]

[ext_resource type="Script" uid="uid://b1g3ksk450u7f" path="res://Scripts/camera_2d.gd" id="1_euybs"]
[ext_resource type="Script" uid="uid://xdqbpbf5g62q" path="res://Scripts/juego.gd" id="1_wpuia"]
[ext_resource type="PackedScene" uid="uid://dtohbchdaimmh" path="res://Scenes/jugador.tscn" id="3_h7jpf"]
[ext_resource type="Texture2D" uid="uid://dhnwfjuds42" path="res://Assets/Tileset_Lvl1.png" id="4_l8qcm"]
[ext_resource type="AudioStream" uid="uid://c4rn83uo7fpko" path="res://Assets/SAM Free Music - Childlike.mp3" id="5_pehpj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pehpj"]
texture = ExtResource("4_l8qcm")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0

[sub_resource type="TileSet" id="TileSet_wpuia"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_pehpj")

[sub_resource type="LabelSettings" id="LabelSettings_l8qcm"]

[node name="Juego" type="Node2D" unique_id=1195737696]
y_sort_enabled = true
script = ExtResource("1_wpuia")

[node name="Jugador" parent="." unique_id=1102808260 instance=ExtResource("3_h7jpf")]
position = Vector2(128, 80)

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=325441682]
position = Vector2(0, -48)
tile_map_data = PackedByteArray("AAD6/wAAAAADAAAAAAD6/wEAAAADAAAAAAD6/wIAAAADAAAAAAD6/wMAAAADAAAAAAD6/wQAAAADAAAAAAD6/wUAAAADAAAAAAD6/wYAAAADAAAAAAD6/wcAAAADAAAAAAD6/wgAAAADAAAAAAD6/wkAAAADAAAAAAD6/woAAAADAAAAAAD6/wsAAAADAAAAAAD7/wAAAAADAAAAAAD7/wEAAAADAAAAAAD7/wIAAAADAAAAAAD7/wMAAAADAAAAAAD7/wQAAAADAAAAAAD7/wUAAAADAAAAAAD7/wYAAAADAAAAAAD7/wcAAAADAAAAAAD7/wgAAAADAAAAAAD7/wkAAAADAAAAAAD7/woAAAADAAAAAAD7/wsAAAADAAAAAAD8/wAAAAADAAAAAAD8/wEAAAADAAAAAAD8/wIAAAADAAAAAAD8/wMAAAADAAAAAAD8/wQAAAABAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAAAAAAAAAD8/wcAAAAAAAAAAAD8/wgAAAAAAAAAAAD8/wkAAAAAAAAAAAD8/woAAAAAAAEAAAD8/wsAAAADAAAAAAD9/wAAAAADAAAAAAD9/wEAAAADAAAAAAD9/wIAAAADAAAAAAD9/wMAAAABAAAAAAD9/wQAAAACAAEAAAD9/wUAAAABAAIAAAD9/wYAAAAAAAIAAAD9/wcAAAABAAIAAAD9/wgAAAAAAAIAAAD9/wkAAAABAAIAAAD9/woAAAACAAAAAAD9/wsAAAAAAAEAAAD+/wAAAAADAAAAAAD+/wEAAAADAAAAAAD+/wIAAAABAAAAAAD+/wMAAAACAAEAAAD+/wQAAAAAAAMAAAD+/wUAAAAAAAIAAAD+/wYAAAABAAIAAAD+/wcAAAAAAAIAAAD+/wgAAAAAAAIAAAD+/wkAAAAAAAIAAAD+/woAAAAAAAMAAAD+/wsAAAACAAAAAAD//wAAAAADAAAAAAD//wEAAAABAAAAAAD//wIAAAACAAEAAAD//wMAAAABAAMAAAD//wQAAAABAAMAAAD//wUAAAAAAAIAAAD//wYAAAABAAIAAAD//wcAAAABAAIAAAD//wgAAAABAAIAAAD//wkAAAABAAIAAAD//woAAAABAAMAAAD//wsAAAAAAAMAAAAAAAAAAAADAAAAAAAAAAEAAAABAAEAAAAAAAIAAAABAAIAAAAAAAMAAAAAAAIAAAAAAAQAAAABAAIAAAAAAAUAAAABAAIAAAAAAAYAAAAAAAIAAAAAAAcAAAABAAIAAAAAAAgAAAABAAIAAAAAAAkAAAABAAIAAAAAAAoAAAAAAAIAAAAAAAsAAAABAAIAAAABAAAAAAADAAAAAAABAAEAAAABAAEAAAABAAIAAAABAAIAAAABAAMAAAABAAIAAAABAAQAAAABAAIAAAABAAUAAAAAAAIAAAABAAYAAAABAAIAAAABAAcAAAAAAAIAAAABAAgAAAAAAAIAAAABAAkAAAABAAIAAAABAAoAAAAAAAIAAAABAAsAAAABAAIAAAACAAAAAAADAAAAAAACAAEAAAABAAEAAAACAAIAAAAAAAIAAAACAAMAAAABAAIAAAACAAQAAAABAAIAAAACAAUAAAAAAAIAAAACAAYAAAAAAAIAAAACAAcAAAAAAAIAAAACAAgAAAAAAAIAAAACAAkAAAABAAIAAAACAAoAAAAAAAIAAAACAAsAAAAAAAIAAAADAAAAAAADAAAAAAADAAEAAAABAAEAAAADAAIAAAAAAAIAAAADAAMAAAAAAAIAAAADAAQAAAAAAAIAAAADAAUAAAABAAIAAAADAAYAAAABAAIAAAADAAcAAAAAAAIAAAADAAgAAAABAAIAAAADAAkAAAABAAIAAAADAAoAAAAAAAIAAAADAAsAAAABAAIAAAAEAAAAAAADAAAAAAAEAAEAAAABAAEAAAAEAAIAAAAAAAMAAAAEAAMAAAAAAAIAAAAEAAQAAAABAAIAAAAEAAUAAAABAAIAAAAEAAYAAAAAAAIAAAAEAAcAAAAAAAIAAAAEAAgAAAABAAIAAAAEAAkAAAAAAAIAAAAEAAoAAAABAAIAAAAEAAsAAAAAAAIAAAAFAAAAAAADAAAAAAAFAAEAAAABAAEAAAAFAAIAAAABAAMAAAAFAAMAAAAAAAIAAAAFAAQAAAABAAIAAAAFAAUAAAABAAIAAAAFAAYAAAABAAIAAAAFAAcAAAABAAIAAAAFAAgAAAABAAIAAAAFAAkAAAABAAIAAAAFAAoAAAAAAAIAAAAFAAsAAAABAAIAAAAGAAAAAAADAAAAAAAGAAEAAAABAAEAAAAGAAIAAAABAAMAAAAGAAMAAAABAAIAAAAGAAQAAAAAAAIAAAAGAAUAAAAAAAIAAAAGAAYAAAAAAAIAAAAGAAcAAAABAAIAAAAGAAgAAAAAAAIAAAAGAAkAAAAAAAIAAAAGAAoAAAABAAIAAAAGAAsAAAAAAAIAAAAHAAAAAAADAAAAAAAHAAEAAAABAAEAAAAHAAIAAAABAAMAAAAHAAMAAAAAAAIAAAAHAAQAAAAAAAIAAAAHAAUAAAAAAAIAAAAHAAYAAAABAAIAAAAHAAcAAAABAAIAAAAHAAgAAAABAAIAAAAHAAkAAAAAAAIAAAAHAAoAAAAAAAIAAAAHAAsAAAAAAAIAAAAIAAAAAAADAAAAAAAIAAEAAAABAAEAAAAIAAIAAAABAAMAAAAIAAMAAAABAAIAAAAIAAQAAAAAAAIAAAAIAAUAAAAAAAIAAAAIAAYAAAABAAIAAAAIAAcAAAABAAIAAAAIAAgAAAABAAIAAAAIAAkAAAABAAIAAAAIAAoAAAAAAAIAAAAIAAsAAAAAAAIAAAAJAAAAAAADAAAAAAAJAAEAAAABAAEAAAAJAAIAAAAAAAMAAAAJAAMAAAABAAIAAAAJAAQAAAAAAAIAAAAJAAUAAAABAAIAAAAJAAYAAAABAAIAAAAJAAcAAAABAAIAAAAJAAgAAAAAAAIAAAAJAAkAAAABAAIAAAAJAAoAAAAAAAIAAAAJAAsAAAAAAAIAAAAKAAAAAAADAAAAAAAKAAEAAAABAAEAAAAKAAIAAAABAAMAAAAKAAMAAAABAAIAAAAKAAQAAAAAAAIAAAAKAAUAAAABAAIAAAAKAAYAAAAAAAIAAAAKAAcAAAAAAAIAAAAKAAgAAAAAAAIAAAAKAAkAAAABAAIAAAAKAAoAAAAAAAIAAAAKAAsAAAABAAIAAAALAAAAAAADAAAAAAALAAEAAAABAAEAAAALAAIAAAAAAAMAAAALAAMAAAABAAIAAAALAAQAAAABAAIAAAALAAUAAAAAAAIAAAALAAYAAAAAAAIAAAALAAcAAAAAAAIAAAALAAgAAAABAAIAAAALAAkAAAABAAIAAAALAAoAAAABAAIAAAALAAsAAAAAAAIAAAAMAAAAAAADAAAAAAAMAAEAAAABAAEAAAAMAAIAAAABAAIAAAAMAAMAAAABAAIAAAAMAAQAAAABAAIAAAAMAAUAAAABAAIAAAAMAAYAAAABAAIAAAAMAAcAAAABAAIAAAAMAAgAAAAAAAIAAAAMAAkAAAAAAAIAAAAMAAoAAAAAAAIAAAAMAAsAAAABAAIAAAANAAAAAAADAAAAAAANAAEAAAABAAEAAAANAAIAAAAAAAIAAAANAAMAAAABAAIAAAANAAQAAAABAAIAAAANAAUAAAAAAAIAAAANAAYAAAABAAIAAAANAAcAAAABAAIAAAANAAgAAAAAAAIAAAANAAkAAAABAAIAAAANAAoAAAAAAAIAAAANAAsAAAABAAIAAAAOAAAAAAADAAAAAAAOAAEAAAABAAEAAAAOAAIAAAAAAAIAAAAOAAMAAAAAAAIAAAAOAAQAAAAAAAIAAAAOAAUAAAAAAAIAAAAOAAYAAAAAAAIAAAAOAAcAAAAAAAIAAAAOAAgAAAAAAAIAAAAOAAkAAAAAAAIAAAAOAAoAAAABAAIAAAAOAAsAAAAAAAIAAAAPAAAAAAADAAAAAAAPAAEAAAABAAEAAAAPAAIAAAAAAAIAAAAPAAMAAAABAAIAAAAPAAQAAAABAAIAAAAPAAUAAAAAAAIAAAAPAAYAAAABAAIAAAAPAAcAAAAAAAIAAAAPAAgAAAABAAIAAAAPAAkAAAABAAIAAAAPAAoAAAAAAAIAAAAPAAsAAAAAAAIAAAAQAAAAAAADAAAAAAAQAAEAAAACAAAAAAAQAAIAAAAAAAEAAAAQAAMAAAAAAAMAAAAQAAQAAAABAAMAAAAQAAUAAAAAAAIAAAAQAAYAAAABAAIAAAAQAAcAAAABAAIAAAAQAAgAAAAAAAIAAAAQAAkAAAAAAAIAAAAQAAoAAAABAAMAAAAQAAsAAAAAAAMAAAARAAAAAAADAAAAAAARAAEAAAADAAAAAAARAAIAAAACAAAAAAARAAMAAAAAAAEAAAARAAQAAAABAAMAAAARAAUAAAAAAAIAAAARAAYAAAAAAAIAAAARAAcAAAABAAIAAAARAAgAAAABAAIAAAARAAkAAAAAAAIAAAARAAoAAAAAAAMAAAARAAsAAAABAAAAAAASAAAAAAADAAAAAAASAAEAAAADAAAAAAASAAIAAAADAAAAAAASAAMAAAACAAAAAAASAAQAAAAAAAEAAAASAAUAAAAAAAMAAAASAAYAAAAAAAMAAAASAAcAAAABAAMAAAASAAgAAAAAAAMAAAASAAkAAAAAAAMAAAASAAoAAAABAAAAAAASAAsAAAACAAEAAAATAAAAAAADAAAAAAATAAEAAAADAAAAAAATAAIAAAADAAAAAAATAAMAAAADAAAAAAATAAQAAAACAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAACAAEAAAATAAsAAAADAAAAAAAUAAAAAAADAAAAAAAUAAEAAAADAAAAAAAUAAIAAAADAAAAAAAUAAMAAAADAAAAAAAUAAQAAAADAAAAAAAUAAUAAAADAAAAAAAUAAYAAAADAAAAAAAUAAcAAAADAAAAAAAUAAgAAAADAAAAAAAUAAkAAAADAAAAAAAUAAoAAAADAAAAAAAUAAsAAAADAAAAAAAVAAAAAAADAAAAAAAVAAEAAAADAAAAAAAVAAIAAAADAAAAAAAVAAMAAAADAAAAAAAVAAQAAAADAAAAAAAVAAUAAAADAAAAAAAVAAYAAAADAAAAAAAVAAcAAAADAAAAAAAVAAgAAAADAAAAAAAVAAkAAAADAAAAAAAVAAoAAAADAAAAAAAVAAsAAAADAAAAAAD6/wwAAAADAAAAAAD6/w0AAAADAAAAAAD6/w4AAAADAAAAAAD7/wwAAAADAAAAAAD7/w0AAAADAAAAAAD7/w4AAAADAAAAAAD8/wwAAAADAAAAAAD8/w0AAAADAAAAAAD8/w4AAAADAAAAAAD9/wwAAAADAAAAAAD9/w0AAAADAAAAAAD9/w4AAAADAAAAAAD+/wwAAAAAAAEAAAD+/w0AAAADAAAAAAD+/w4AAAADAAAAAAD//wwAAAACAAAAAAD//w0AAAAAAAEAAAD//w4AAAADAAAAAAAAAAwAAAABAAIAAAAAAA0AAAABAAEAAAAAAA4AAAADAAAAAAABAAwAAAAAAAIAAAABAA0AAAABAAEAAAABAA4AAAADAAAAAAACAAwAAAAAAAIAAAACAA0AAAABAAEAAAACAA4AAAADAAAAAAADAAwAAAABAAIAAAADAA0AAAABAAEAAAADAA4AAAADAAAAAAAEAAwAAAAAAAMAAAAEAA0AAAABAAEAAAAEAA4AAAADAAAAAAAFAAwAAAAAAAMAAAAFAA0AAAABAAEAAAAFAA4AAAADAAAAAAAGAAwAAAABAAMAAAAGAA0AAAABAAEAAAAGAA4AAAADAAAAAAAHAAwAAAAAAAMAAAAHAA0AAAABAAEAAAAHAA4AAAADAAAAAAAIAAwAAAABAAMAAAAIAA0AAAABAAEAAAAIAA4AAAADAAAAAAAJAAwAAAABAAMAAAAJAA0AAAABAAEAAAAJAA4AAAADAAAAAAAKAAwAAAAAAAMAAAAKAA0AAAABAAEAAAAKAA4AAAADAAAAAAALAAwAAAAAAAMAAAALAA0AAAABAAEAAAALAA4AAAADAAAAAAAMAAwAAAAAAAIAAAAMAA0AAAABAAEAAAAMAA4AAAADAAAAAAANAAwAAAAAAAIAAAANAA0AAAABAAEAAAANAA4AAAADAAAAAAAOAAwAAAAAAAIAAAAOAA0AAAABAAEAAAAOAA4AAAADAAAAAAAPAAwAAAABAAIAAAAPAA0AAAABAAEAAAAPAA4AAAADAAAAAAAQAAwAAAABAAAAAAAQAA0AAAACAAEAAAAQAA4AAAADAAAAAAARAAwAAAACAAEAAAARAA0AAAADAAAAAAARAA4AAAADAAAAAAASAAwAAAADAAAAAAASAA0AAAADAAAAAAASAA4AAAADAAAAAAATAAwAAAADAAAAAAATAA0AAAADAAAAAAATAA4AAAADAAAAAAAUAAwAAAADAAAAAAAUAA0AAAADAAAAAAAUAA4AAAADAAAAAAAVAAwAAAADAAAAAAAVAA0AAAADAAAAAAAVAA4AAAADAAAAAAA=")
tile_set = SubResource("TileSet_wpuia")

[node name="Camera2D" type="Camera2D" parent="." unique_id=1204849194]
position = Vector2(128, 72)
zoom = Vector2(4.5, 4.5)
script = ExtResource("1_euybs")

[node name="PosBlue" type="Marker2D" parent="." unique_id=977752817]
unique_name_in_owner = true
position = Vector2(368, 144)

[node name="PosGreen" type="Marker2D" parent="." unique_id=1414657846]
unique_name_in_owner = true
position = Vector2(-112, 144)

[node name="Spawn" type="Timer" parent="." unique_id=1104465276]
wait_time = 4.0
autostart = true

[node name="Vidas" type="Label" parent="." unique_id=1489155019]
unique_name_in_owner = true
offset_left = 33.0
offset_top = 1.0
offset_right = 73.0
offset_bottom = 24.0
label_settings = SubResource("LabelSettings_l8qcm")

[node name="ContOleadas" type="Label" parent="." unique_id=452595554]
unique_name_in_owner = true
offset_left = 160.0
offset_top = 1.0
offset_right = 200.0
offset_bottom = 24.0

[node name="GameOver" type="CanvasLayer" parent="." unique_id=497565312]
unique_name_in_owner = true
visible = false
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="GameOver" unique_id=1957737720]
offset_left = -96.0
offset_top = -48.0
offset_right = 352.0
offset_bottom = 192.0
color = Color(0, 0.07450981, 0.07450981, 0.7019608)

[node name="Label" type="Label" parent="GameOver" unique_id=685449497]
offset_left = 81.0
offset_top = 52.0
offset_right = 168.0
offset_bottom = 75.0
text = "Game Over"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1918950847]
unique_name_in_owner = true
stream = ExtResource("5_pehpj")
volume_db = -20.0
autoplay = true

[connection signal="game_over" from="Jugador" to="." method="_on_jugador_game_over"]
[connection signal="hit" from="Jugador" to="." method="_on_jugador_hit"]
[connection signal="timeout" from="Spawn" to="." method="_on_spawn_timeout"]
